fix refresh icon not being centered on firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,6 +64,7 @@ $tableOptionsHeight: 79px;
       width: 60px;
       height: 60px;
       display: flex;
+      align-items: center;
       color: white;
 
       &:hover, &:active {
